End to end create vacancy

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/CreateVacancy.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/CreateVacancy.cshtml
@@ -67,7 +67,8 @@
         </label>
     </div>
 
-    @Html.HiddenFor(model => model.ProviderSiteErn)
+    @Html.HiddenFor(model => model.Employer.ProviderSiteErn)
+    @Html.HiddenFor(model => model.Employer.Ern);
 
     <fieldset class="form-group">
         <button type="submit" class="button">Create vacancy</button>
