--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/VacancySubmitted.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/VacancySubmitted.cshtml
@@ -50,7 +50,7 @@
         <span class="subtitle">Start with a fresh template or continue with a draft</span>
     </div>
     <div class="form-group">
-        <a href="@Url.RouteUrl(RecruitmentRouteNames.NewVacancyLandingPage)" class="button">Create vacancy</a>
+        <a href="@Url.RouteUrl(RecruitmentRouteNames.SelectExistingEmployer, new { providerSiteErn = Model.ProviderSiteErn })" class="button">Create vacancy</a>
     </div>
     <p>
         <a href="@Url.RouteUrl(RecruitmentRouteNames.RecruitmentHome)">Return to recruitment home</a>
