Correct provider site information displayed

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/CreateVacancy.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/CreateVacancy.cshtml
@@ -67,6 +67,7 @@
         </label>
     </div>
 
+    @Html.HiddenFor(model => model.Ukprn)
     @Html.HiddenFor(model => model.Employer.ProviderSiteErn)
     @Html.HiddenFor(model => model.Employer.Ern);
 
