--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SubmitVacancy.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SubmitVacancy.cshtml
@@ -143,33 +143,14 @@
         <div class="grid-wrapper">
             <div class="grid grid-2-3">
                 <div class="inner-block-padr">
-                    <p>
-                        Apprenticeships combine on-the-job and off-the-job training. This means you'll
-                        spend time in a hairdressing salon working and learning the
-                        hairdressing or barbering skills to develop your competence
-                        in hairdressing or barbering.
-                    </p>
-                    <p>
-                        You will attend one day a week at our state of the art London
-                        Hairdressing Academy training centre and salon, learning the
-                        underpinning knowledge and practical skills associated with
-                        hairdressing as well as important skills such as customer service,
-                        teamwork and retail skills including Maths and English.
-                    </p>
-                    <p>
-                        You will gain skills, insight and experience with real clients, real work and real
-                        products. Apprenticeships are not qualifications in their own
-                        right. Instead they are a framework made up of many elements.
-                        An intermediate NVQ Diploma in Hairdressing or barbering which
-                        is a work based qualification that is designed to ensure the
-                        apprentice is job ready.
-                    </p>
+                    <p>@Model.ProviderSite.CandidateDescription</p>
                     <div class="edit-wrapper">
                         <h3 class="bold-small">
                             Apprenticeship framework<a href="#" class="heading-edit edit-link font-xsmall">Edit</a>
                         </h3>
                         <p>Hairdressing (Skills Active/Habia)</p>
                         <p>
+                            <em>Where does this come from?</em>
                             The training provider has achieved a sector success rate of
                             72% for this type of apprenticeship training.
                         </p>
@@ -178,19 +159,18 @@
             </div>
             <div class="grid grid-1-3">
                 <h3 class="bold-small">Training provider</h3>
-                <p>Bradford college</p>
+                <p>@Model.ProviderSite.Name</p>
                 <div class="edit-wrapper">
                     <h3 class="heading-small">
                         Contact <a href="#" class="heading-edit edit-link font-xsmall">Edit</a>
                     </h3>
                     <address>
-                        City Training Services<br/>
-                        39-41 Chapel Street<br/>
-                        Little Germany<br/>
-                        Bradford<br/>
-                        BD1 5BY<br/>
-                        Telephone 01274 728316<br/>
-                        e-mail <a href="mailto:info@citytraining.org.uk">info@citytraining.org.uk</a>
+                        @Model.ProviderSite.Address.AddressLine1<br/>
+                        @Model.ProviderSite.Address.AddressLine2<br/>
+                        @Model.ProviderSite.Address.AddressLine3<br/>
+                        @Model.ProviderSite.Address.AddressLine4<br/>
+                        @Model.ProviderSite.Address.Postcode<br/>
+                        @Model.ProviderSite.ContactDetailsForCandidate
                     </address>
                 </div>
             </div>
