Correct framework displayed

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SubmitVacancy.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SubmitVacancy.cshtml
@@ -148,7 +148,7 @@
                         <h3 class="bold-small">
                             Apprenticeship framework<a href="#" class="heading-edit edit-link font-xsmall">Edit</a>
                         </h3>
-                        <p>Hairdressing (Skills Active/Habia)</p>
+                        <p>@Model.FrameworkName</p>
                         <p>
                             <em>Where does this come from?</em>
                             The training provider has achieved a sector success rate of
