--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/ConfirmEmployer.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/ConfirmEmployer.cshtml
@@ -23,9 +23,12 @@
             <div class="inner-block-padr">
                 <h3 class="bold-small">Employer</h3>
                 <p class="small-btm-margin">@Model.Name</p>
-                <p>
-                    <a href="@Model.Website">@Model.Website</a>
-                </p>
+                @if (Model.IsWebsiteUrlWellFormed)
+                {
+                    <p>
+                        <a href="@Model.WebsiteUrl" target="_blank" rel="external">@Model.WebsiteUrl</a>
+                    </p>
+                }
                 <h3 class="bold-small">Address</h3>
                 <p class="small-btm-margin">@Model.Address.AddressLine1</p>
                 <p class="small-btm-margin">@Model.Address.AddressLine2</p>
