--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SubmitVacancy.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SubmitVacancy.cshtml
@@ -51,7 +51,7 @@
                 </div>
             </div>
             <div class="grid grid-2-3">
-                @Html.FormTextAreaFor(m => m.LongDescription, controlHtmlAttributes: new { @class = "width-all-1-1", type = "text", size = 12 }, containerHtmlAttributes: new RouteValueDictionary { { dataEditableAttribute, null } }, labelHtmlAttributes: new { @class = "bold-small" })
+                @Html.FormTextAreaFor(m => m.LongDescription, controlHtmlAttributes: new { @class = "width-all-1-1", type = "text", size = 12, rows = 22 }, containerHtmlAttributes: new RouteValueDictionary { { dataEditableAttribute, null } }, labelHtmlAttributes: new { @class = "bold-small" })
             </div>
         </div>
     </section>
